--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="text" name="task" id="task">
                 <label for="task">New Task</label>
               </div>
-              <input type="submit" value="Add Task" class="btn black">
+              <input type="submit" value="Add Task" style="font-family: 'Gayathri', sans-serif;" class="btn black">
             </form>
           </div>
         </div>
@@ -39,8 +39,6 @@
     </div>
   </div>
 </div>
-  
-
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="app.js"></script>
